todo Js. en el index.js

--- a/src/index.html
+++ b/src/index.html
@@ -25,17 +25,20 @@
       <div>
         <img class="tarjeta-con-diseño" src="img/tarjeta-con-diseño (2).jpg" width="400px"/>
       </div>
-      <div>
-        <label class="datos" for="numero">Ingrese su número de tarjeta</label><br><br>
-        <input id="numero" value="1234567891234567" minlength="16" maxlength="16" type="text" placeholder="#### #### #### 1234">
-      </div>
-      <br>
-      <br>
-      <div>
-        <label class="datos" for="name">Ingrese su nombre completo</label><br><br>
-        <input id="name" value="Ariel Navarro"  type="text" placeholder="Ariel Kristal Navarro Monzón">
-      </div>
-      <input id="enviar" class="boton" type="submit"/>
+      <!-- <div id="error"></div>
+      <form> -->
+       <div>
+         <label class="datos" for="numero">Ingrese su número de tarjeta</label><br><br>
+         <input id="numero" minlength="16" maxlength="16" type="number" placeholder="#### #### #### 1234">
+       </div>
+       <br>
+       <br>
+        <div>
+         <label class="datos" for="name">Ingrese su nombre completo</label><br><br>
+         <input id="name" value="Ariel Navarro" type="text" placeholder="Ariel Navarro">
+       </div>
+       <input id="enviar" class="boton" type="submit"/>
+     <!-- </form> -->
     </section>
     </section>
 
