--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <body>
     <section class="section">
     <section class="left">
-        <img class="logo" src="img/logo.bcp.png" width="100px"/>
+        <img class="logo" src="img/logo.bcp.png" width="100px">
      <div class="items">
-      <img class="tarjeta-gold"src="img/tarjeta-gold.png" width="150px"/>
+      <img class="tarjeta-gold" src="img/tarjeta-gold.png" width="150px">
       <p class="párrafo">
         Bienvenida(o) a tu página de <br> banca de confianza
       </p>
@@ -18,18 +18,16 @@
         Ingresa tus datos para verificar tu <br> tarjeta de crédito
       </p>
       </div>
-      <img class="laptop" src="img/laptop png mac.png" width="300px"/>
+      <img class="laptop" src="img/laptop png mac.png" width="300px">
     </section>
 
     <section class="right">
       <div>
         <img class="tarjeta-con-diseño" src="img/tarjeta-con-diseño (2).jpg" width="400px"/>
       </div>
-      <!-- <div id="error"></div>
-      <form> -->
        <div>
          <label class="datos" for="numero">Ingrese su número de tarjeta</label><br><br>
-         <input id="numero" minlength="16" maxlength="16" type="number" placeholder="#### #### #### 1234">
+         <input id="numero" type="number" placeholder="#### #### #### 1234">
        </div>
        <br>
        <br>
@@ -38,7 +36,6 @@
          <input id="name" value="Ariel Navarro" type="text" placeholder="Ariel Navarro">
        </div>
        <input id="enviar" class="boton" type="submit"/>
-     <!-- </form> -->
     </section>
     </section>
 
